# movie-recommender-api

./: .gitignore  Makefile  README.en.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
config/: config.py
config/toml/: settings.toml
prisma/: schema.prisma
src/: app.py
src/graphql/fragments/: movie_fragment.py
src/graphql/models/: movie.py
src/graphql/resolvers/: movie_resolver.py
src/graphql/schemas/: mutation_schema.py  query_schema.py
